<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick_session"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_quick_session_short"
        android:shortcutLongLabel="@string/shortcut_quick_session_long">
        <intent
            android:action="app.notekar.notekar.ACTION_NOTE"
            android:targetPackage="app.notekar.notekar"
            android:targetClass="app.notekar.notekar.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="log_past_moment"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_log_past_moment_short"
        android:shortcutLongLabel="@string/shortcut_log_past_moment_long">
        <intent
            android:action="app.notekar.notekar.ACTION_NOTE"
            android:targetPackage="app.notekar.notekar"
            android:targetClass="app.notekar.notekar.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="open_search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="app.notekar.notekar.ACTION_NOTE"
            android:targetPackage="app.notekar.notekar"
            android:targetClass="app.notekar.notekar.MainActivity" />
    </shortcut>
</shortcuts>
